<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

<!--  В будущем может быть сделаю и другие калькуляторы :)
      А Сейчас мне не хватает знаний и идей, как это реализовать.  -->

    <!--    <RadioButton-->
<!--        android:id="@+id/radioButton2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="RadioButton"-->
<!--        tools:layout_editor_absoluteX="16dp"-->
<!--        tools:layout_editor_absoluteY="168dp" />-->

<!--    <RadioButton-->
<!--        android:id="@+id/radioButton2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="RadioButton"-->
<!--        tools:layout_editor_absoluteX="16dp"-->
<!--        tools:layout_editor_absoluteY="257dp" />-->

<!--    <RadioButton-->
<!--        android:id="@+id/radioButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="RadioButton"-->
<!--        tools:layout_editor_absoluteX="16dp"-->
<!--        tools:layout_editor_absoluteY="351dp" />-->

<!--    <RadioButton-->
<!--        android:id="@+id/radioButton2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="RadioButton"-->
<!--        tools:layout_editor_absoluteX="16dp"-->
<!--        tools:layout_editor_absoluteY="443dp" />-->

<!--    <RadioButton-->
<!--        android:id="@+id/radioButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="RadioButton"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.053"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.87" />-->

    <RadioButton
        android:id="@+id/bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="92dp"
        android:checked="true"
        android:text="@string/bmi_calc"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginTop="16dp"

        android:background="@drawable/exit_button"
        android:backgroundTint="#000000"
        android:backgroundTintMode="src_in"
        android:foregroundTint="#000000"
        android:onClick="startMainActivity"
        android:textColorLink="#000000"
        app:iconTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="24dp"
        android:text="@string/settings_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="148dp"
        android:text="@string/bmi_about"
        android:textColor="#706C6C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/creatorName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
